--- a/src/components/APIDemo.css
+++ b/src/components/APIDemo.css
@@ -32,13 +32,24 @@
 }
 
 /* Column layout using grid */
-
+/* ---Left column--- */
 .APIDemo-tutorial {
   grid-column: 1;
   grid-row: 1 / span 3;
 
+  background: white;
+  overflow-y: auto;
+
+  /* Place the scroll bar on the left */
+  direction: rtl;
 }
 
+.APIDemo-tutorial * {
+  /* Reset children's text direction back to left->right */
+  direction: ltr;
+}
+
+/* ---Right column--- */
 .APIDemo-code {
   grid-column: 2;
   grid-row: 1 / span 2;
